welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:2: error: i is already defined as variable i
	var i,i,t:Int=0;
              ^maxValue:4: error: not found: value nums
	for (x<- 0 to nums.length-1) {
                      ^maxValue:20: error: not found: value num
	tri(num);
            ^